tests/NormalTests/paczka1/fuzzy1/53713867.err
Error in line 16: h6umUO S417 46,6
Error in line 21: rx6vEF S417 84,6
Error in line 33: 9GUicl S417 256,59
Error in line 38: S69 S849 -1,6
